# bytes2wav

./: pyproject.toml
src/bytes2wavbytes/: __init__.py  utils.py
test/: test_script.py
