[project]
name = "bytes2wavbytes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cpwan", email = "cpwan@connect.ust.hk" }
]
requires-python = ">=3.13"
dependencies = [
    "python-magic>=0.4.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
